--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
+
+
 * {
+    
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -6,8 +9,9 @@
 }
 
 .navbar {
-  background: #f7f7f7;
-  height: 100px;
+  background: rgba(255, 255, 255, 0.8);
+  /* outline: 2px solid #EEEEEE; */
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,9 +27,54 @@
   height: 80px;
   z-index: 1;
   width: 100%;
-  max-width: 1300px;
+  max-width: 100%;
   margin-right: auto;
   margin-left: auto;
   padding-right: 50px;
   padding-left: 50px;
+}
+
+
+
+#logo {
+    background-color: #786478;
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 1.6rem;
+}
+
+.navbar_menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  text-align: center;
+}
+
+.navbar_item {
+  height: 80px;
+}
+
+.navbar_link {
+  color: #786478;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: 0 1rem;
+  height: 100%;
+}
+
+.background1 {
+    filter: brightness(1.03);
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin-top: -80px;
 }
