--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 }
 
 .navbar {
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 1);
   /* outline: 2px solid #EEEEEE; */
   height: 80px;
   display: flex;
@@ -72,9 +72,88 @@
 }
 
 .background1 {
-    filter: brightness(1.03);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 50px
+}
+
+
+.hover-container {
+    position: relative;
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -300px;
+    z-index: 2;
+}       
+
+.hover-overlay {
+    position: absolute;
+    top: 50%; /* Center the overlay vertically */
+    left: 50%; /* Center the overlay horizontally */
+    transform: translate(-50%, -50%); /* Center the overlay perfectly */
+    width: 50%; /* Set a fixed width */
+    height: 500px; /* Set a fixed height */
+    background-color: #dcb8b8;
+    border-radius: 10px; /* Adjust the border-radius for curved corners */
+    opacity: 0;
+    transform-origin: center center; /* Ensure scaling is done from the center */
+    transition: opacity 1s ease, transform 1s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.hover2-overlay {
+    position: absolute;
+    top: 50%; /* Center the overlay vertically */
+    left: 50%; /* Center the overlay horizontally */
+    transform: translate(-50%, -50%); /* Center the overlay perfectly */
+    width: 55%; /* Set a fixed width */
+    height: 600px; /* Set a fixed height */
+    background-color: rgba(249, 231, 231, 0.7);
+    border-radius: 10px; /* Adjust the border-radius for curved corners */
+    opacity: 0;
+    transform-origin: center center; /* Ensure scaling is done from the center */
+    transition: opacity 1s ease, transform 1s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.hover-container:hover .hover-overlay {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+.hover-container:hover .hover2-overlay {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.section2 {
+    background-color: #786478;
+    height: 100px; /* Adjust the height as needed */
     width: 100%;
-    height: 100%;
-    display: block;
-    margin-top: -80px;
+    margin-top: -50px;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section3 {
+    background-color: #dcb8b8;
+    height: 400px; /* Adjust the height as needed */
+    width: 100%;
+    margin-top: 400px;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
