--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,23 @@
   padding: 0;
   font-family: "Marcellus", serif;
 
-  /*
-  font-family: 'Passion One', sans-serif;
-  font-family: "DM Serif Display", serif; 
+  font-family: "Passion One", sans-serif;
+  font-family: "DM Serif Display", serif; /*
+  font-family: 'Nova Square', sans-serif;/*
+  font-family: 'Righteous', sans-serif;
+  
   font-family: "Sora", sans-serif; 
   */
 }
+#navbarOutline {
+  position: fixed;
+  margin-top: 15px;
+  background: rgba(255, 255, 255);
+}
 
 .navbar {
-  background: rgb(244, 244, 244);
+  border-bottom: 2px solid #000;
+  background: rgb(248, 248, 248);
   /* outline: 2px solid #EEEEEE; */
   width: 100%;
   height: 80px;
@@ -73,64 +81,34 @@
   height: 100%;
 }
 
-.about {
+.line1 {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 100%;
+  transform: rotate(95deg);
+  background-color: #ffffff;
+  margin-top: 100px;
+  margin-left: -20%;
   position: absolute;
-
-  left: 50%;
-  transform: translateX(-50%);
-  width: 200px;
-  font-size: 22px;
-  text-align: center;
-  margin-top: 140px;
-  background-color: white;
-  padding: 20px;
-  text-decoration: none;
-  color:rgb(0, 0, 0);
-  border-left: 2px solid #000; /* Border on the left edge */
-  border-bottom: 2px solid #000; /* Border on the bottom edge */
-  border-top: 2px solid #000; /* Border on the bottom edge */
-  border-right: 2px solid #000; /* Border on the left edge */
+  z-index: -1;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
 }
+.line2 {
+  height: 30px;
+  width: 6000px;
 
-.about a:hover {
-  background-color: #d7afaf;
-}
-
-.biggerbox {
-  width: 228px;
-  height: 100px;
-  font-size: 22px;
-  text-align: center;
-  margin-top: 125px;
+  background-color: #ffffff;
+  margin-top: 400px;
+  margin-left: 29.2%;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: white; /* Set the background color to white */
-  padding: 20px; /* Add padding to create space between text and box edges */
-  border-left: 2px solid #000; /* Border on the left edge */
-  border-top: 2px solid #000; /* Border on the bottom edge */
-  border-right: 2px solid #000; /* Border on the left edge */
-  text-align: center; /* Center-align text */
-  
+  z-index: -1;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
 }
 
-.background1 {
-  display: flex;
-  align-items: center; /* Center vertically */
-  justify-content: center; /* Center horizontally */
-  position: relative;
-  z-index: -100;
-  padding: 20px;
-}
-
-.background1 img {
-  max-width: 1800px; /* Set maximum width for the image */
-  width: 100%; /* Ensure the image doesn't exceed its container */
-  height: auto; /* Maintain aspect ratio */
-}
 
 .section2 {
   background-color: #d3d3d328;
@@ -155,14 +133,17 @@
 
 /* Side Navigation Bar Styles */
 .sidenav {
-  border-radius: 20px;
-  height: 250px;
-  width: 220px;
+  border: 4px double #000000;
+
+  background-image: url("images/iamge2.jpg");
+  background-size: cover;
+  height: 300px;
+  width: 336px;
   position: fixed;
   z-index: 900;
   top: 0;
   left: 0;
-  background-color: rgba(221, 205, 205, 0.9); /* 0.8 transparency */
+  background-color: rgba(255, 255, 255, 0.8); /* 0.8 transparency */
   overflow-x: hidden;
   padding-top: 20px;
   transition: 0.5s;
@@ -172,9 +153,9 @@
 
 /* Links in the Side Navigation Bar */
 .sidenav a {
-  padding: 15px 8px;
+  padding: 15px 15px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 24px;
   color: rgb(0, 0, 0);
   display: block;
   transition: 0.3s;
@@ -196,9 +177,11 @@
   margin-right: 200px;
 
   transition: margin-left 0.5s;
+  padding-bottom: 40px;
 }
 
 h2 {
+  padding-top: 40px;
   margin-left: 220px; /* Same as the width of the side navigation bar */
   margin-right: 220px;
 
