--- a/about.css
+++ b/about.css
@@ -4,12 +4,12 @@
   background-size: cover;
   left: 44%;
   transform: translateX(-44%);
-  width: 400px;
+  width: 20%;
   height: 150px;
   position: absolute;
-  line-height: 100px;
+  
   z-index: 3;
-  font-size: 40px;
+  font-size: 180%;
   text-align: center;
   margin-top: 75px;
   background-color: rgba(255, 255, 255, 0.95);
@@ -21,6 +21,9 @@
   border-top: 2px solid #000; /* Border on the bottom edge */
   border-right: 2px solid #000; /* Border on the left edge */
   transition: 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .about:hover {
@@ -28,10 +31,10 @@
   opacity: 0.5;
 }
 
-#aboutme {
+.aboutme_appear {
   background-size: cover;
   background-position: bottom;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
 
   border-bottom: 2px solid #000;
   border-left: 2px solid #000;
@@ -39,18 +42,42 @@
   border-top: 2px solid #000;
   border-radius: 5px;
   position: absolute;
-  left: 44%;
-  transform: translateX(-44%);
-  max-width: 400px;
-  margin-top: 250px;
+  left: 65%;
+  height: 225px;
+  width: 33%;
+  max-width: 800px;
+  margin-top: 32px;
   opacity: 0;
   padding: 20px;
   visibility: hidden;
   transition: opacity 0.6s ease, visibility 0.6s ease;
 }
 
-#aboutme.show {
+.aboutme_appear img {
+    max-width: 190px;
+    border-radius: 1000px;
+    margin-top: -88px;
+    margin-left: 69%;
+    position: absolute;
+}
+
+.aboutme_appear p {
+    max-width: 65%;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.aboutme_appear.show {
   opacity: 1;
+  visibility: visible;
+}
+
+#aboutme1 {
+  visibility: hidden;
+  transition: opacity 0.6s ease, visibility 0.6s ease;
+  width: 1000px;
+  margin-left: -640px;
+  margin-top: 350px;
   visibility: visible;
 }
 
@@ -99,4 +126,48 @@
   max-width: 100%; /* Set maximum width for the image */
   width: 100%; /* Ensure the image doesn't exceed its container */
   height: auto; /* Maintain aspect ratio */
+}
+
+.line1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 100%;
+  transform: rotate(95deg);
+  background-color: #ffffff;
+  margin-top: 100px;
+  margin-left: -20%;
+  position: absolute;
+  z-index: -1;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+.line2 {
+  height: 30px;
+  width: 6000px;
+
+  background-color: #ffffff;
+  margin-top: 280px;
+  margin-left: 29.7%;
+  position: absolute;
+  z-index: -1;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+}
+
+.line3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 340px;
+  transform: rotate(90deg);
+  background-color: #ffffff;
+  margin-top: 100px;
+  margin-left: 52%;
+  position: absolute;
+  z-index: -1;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
 }
