--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,9 @@
 
   background-image: url("images/iamge2.jpg");
   background-size: cover;
-  height: 300px;
+  height: auto;
   width: 17.5%;
+  word-wrap: break-word;
   position: fixed;
   z-index: 900;
   top: 0;
@@ -117,6 +118,7 @@
   background-color: rgba(255, 255, 255, 0.8); /* 0.8 transparency */
   overflow-x: hidden;
   padding-top: 20px;
+  padding-bottom: 20px;
   transition: 0.5s;
   margin-top: 200px;
   margin-left: -20px;
@@ -126,11 +128,11 @@
 .sidenav a {
   padding: 15px 15px;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 1.5vw;
   color: rgb(0, 0, 0);
   display: block;
   transition: 0.3s;
-  padding-left: 70px;
+  padding-left: 25%;
 }
 
 /* Change color on hover */
