--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@
   margin: 0;
   padding: 0;
   font-family: "Marcellus", serif;
-
+  
   font-family: "Passion One", sans-serif;
-  font-family: "DM Serif Display", serif; /*
+  font-family: "DM Serif Display", serif; 
+  font-family: 'Lexend Deca', sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Brawler', serif;/*
   font-family: 'Nova Square', sans-serif;/*
   font-family: 'Righteous', sans-serif;
   
@@ -15,12 +18,15 @@
 #navbarOutline {
   position: fixed;
   margin-top: 15px;
-  background: rgba(255, 255, 255);
+  background: rgb(232, 163, 163);
+  color: #fff;
 }
 
 .navbar {
+  
   border-bottom: 2px solid #000;
-  background: rgb(248, 248, 248);
+  background: rgb(10, 10, 10);
+ 
   /* outline: 2px solid #EEEEEE; */
   width: 100%;
   height: 80px;
@@ -31,6 +37,7 @@
   position: sticky;
   top: 0;
   z-index: 999;
+  color: #fff;
 }
 
 .navbar_container {
@@ -44,10 +51,12 @@
   margin-left: auto;
   padding-right: 50px;
   padding-left: 50px;
+  color: #fff;
 }
 
 #logo {
-  background-color: #000;
+  
+  background-color: #ffffff;
   background-size: 100%;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -55,12 +64,13 @@
   -moz-text-fill-color: transparent;
   display: flex;
   align-items: center;
-  cursor: pointer;
+  color: #fff;
   text-decoration: none;
   font-size: 1.6rem;
 }
 
 .navbar_menu {
+  color: #fff;
   display: flex;
   align-items: center;
   list-style: none;
@@ -68,6 +78,7 @@
 }
 
 .navbar_item {
+  color: #fff;
   height: 0px;
 }
 
@@ -79,10 +90,11 @@
   text-decoration: none;
   padding: 0 1rem;
   height: 100%;
+  color: #fff;
 }
 
 .section2 {
-  background-color: #d3d3d328;
+  background-color: #ffffff28;
   height: 100px; /* Adjust the height as needed */
   width: 100%;
   margin-top: -50px;
@@ -92,8 +104,8 @@
   justify-content: center;
 }
 .section3 {
-  background-color: #feecec;
-  height: 400px; /* Adjust the height as needed */
+  background-color: #ffffff;
+  height: 120px; /* Adjust the height as needed */
   width: 100%;
   /* margin-top: 400px; */
   z-index: 1;
@@ -105,7 +117,7 @@
 /* Side Navigation Bar Styles */
 .sidenav {
   border: 4px double #000000;
-
+  border-radius: 15px;
   background-image: url("images/iamge2.jpg");
   background-size: cover;
   height: auto;
@@ -128,8 +140,9 @@
 .sidenav a {
   padding: 15px 15px;
   text-decoration: none;
-  font-size: 1.5vw;
+  font-size: 1.2vw;
   color: rgb(0, 0, 0);
+  font-family: "DM Serif Display", serif; 
   display: block;
   transition: 0.3s;
   padding-left: 25%;
