--- a/about.css
+++ b/about.css
@@ -1,285 +1,70 @@
-.about {
-  border-radius: 1000px;
-  background-image: url("images/iamge2.jpg");
-  background-size: cover;
-  left: 50%;
-  transform: translateX(-44%);
-  width: 20%;
-  max-width: auto;
-  height: 7vw;
-  position: absolute;
-  z-index: 3;
-  font-size: 1.6vw;
-  text-align: center;
-  margin-top: 75px;
-  color: rgba(255, 255, 255, 0.95);
-  padding: 20px;
-  text-decoration: none;
-  color: rgb(0, 0, 0);
-  border-left: 2px solid #000; /* Border on the left edge */
-  border-bottom: 2px solid #000; /* Border on the bottom edge */
-  border-top: 2px solid #000; /* Border on the bottom edge */
-  border-right: 2px solid #000; /* Border on the left edge */
-  transition: 0.5s;
+.aboutme-btn {
+  position: relative;
+  flex-direction: column;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  
+  text-align: center;
+  
+}
+.about {
+  margin-top: 2%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  overflow: hidden;
+  font-size: 1.5vw;
+  width: auto;
+  
+  
+  padding: 20px;
+  z-index: 1;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border-radius: 100vw;
 }
 
-.about:hover {
-  opacity: 0.5;
-}
+
+
 
 .aboutme_appear {
-  background-size: cover;
-  background-position: bottom;
-  background-color: rgba(255, 255, 255, 0.9);
-  display: flex;
-  align-items: center;
-
-  border-right: 2px solid #000;
-  border-top: 2px solid #000;
-  border-radius: 5px;
-  position: absolute;
-  word-wrap: break-word;
-  left: 60.5%;
-  min-height: 225px;
-  height: auto;
-  width: 33%;
-  max-width: 800px;
-  margin-top: 32px;
-  opacity: 0;
-  padding: 20px;
-  visibility: hidden;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-  word-wrap: break-word;
-  max-height: 100px;
-  overflow: auto;
-  float: right;
-}
-
-.aboutme_appear img {
-  max-width: 8vw;
-  height: auto;
-  border-radius: 1000px;
-  width: 100%;
-  margin-left: 50px;
-}
-
-.aboutme_appear p {
-  color: black;
-
-  font-size: 1.2vw;
-  margin-left: 2%;
-}
-
-@media screen and (min-width: 1200px) {
-  .aboutme_appear p {
-    font-size: 1vw; /* Adjust font size for larger screens */
-  }
-}
-
-@media (min-width: 125%) {
-  body {
-    transform: scale(1.25); /* Set the initial scale to 125% */
-  }
-
-  .zoomed {
-    transform: scale(2); /* Set the additional scale for the specific element */
-  }
-}
-
-.aboutme_appear.show {
-  opacity: 1;
-  visibility: visible;
-}
-
-#aboutme1 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  visibility: hidden;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-  width: 12%;
-  height: 350px;
-  max-width: calc(0.15 * 1920);
-  max-height: 350px;
-  overflow: auto;
-  padding-top: 20px;
-  left: 45%;
-  transform: translateX(-60%);
-  margin-top: 350px;
-  visibility: visible;
-  font-size: 1vw;
-  text-align: center;
-}
-
-#aboutme2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  visibility: hidden;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-  width: 12%;
-  height: 350px;
-  max-width: calc(0.15 * 1920);
-  max-height: 350px;
-  overflow: auto;
-  padding-top: 20px;
-  left: 60%;
-  transform: translateX(-60%);
-  visibility: visible;
-  margin-top: 350px;
-  font-size: 1vw;
-  text-align: center;
-}
-
-#aboutme3 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  visibility: hidden;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-  width: 12%;
-  height: 350px;
-  max-width: calc(0.15 * 1920);
-  max-height: 350px;
-  overflow: auto;
-  padding-top: 20px;
-  left: 75%;
-  visibility: visible;
-  transform: translateX(-60%);
-  margin-top: 350px;
-  font-size: 1vw;
-  text-align: center;
-}
-
-#aboutme4 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  visibility: hidden;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-  width: 12%;
-  height: 350px;
-  max-width: calc(0.15 * 1920);
-  max-height: 350px;
-  overflow: auto;
-  padding-top: 20px;
-  left: 90%;
-  transform: translateX(-60%);
-  visibility: visible;
-  margin-top: 350px;
-  font-size: 1vw;
-  text-align: center;
-}
-
-.minimise {
-  display: flex;
-  visibility: hidden;
-  transition: opacity 0.6s ease, visibility 0.6s ease;
-  opacity: 0;
-  left: 44.5%;
-  z-index: 200;
-  max-width: 30px;
-  max-height: 30px;
-  width: auto;
-  height: auto;
-  border-radius: 3px;
-  margin-top: 30px;
-  background-color: rgba(255, 255, 255, 0.9);
-  position: absolute;
-}
-.minimise:hover {
-  background-color: rgb(255, 231, 231);
-  cursor: pointer;
-}
-
-.minimise img {
-  border: 2px solid black;
-}
-
-.minimise.show {
-  opacity: 1;
-  visibility: visible;
-}
-
-.white {
-  height: auto;
-  width: 100%;
-  background-color: #ffffff;
-  background-image: url("images/paper.jpg");
+  left: -20%;
+  opacity: 0%;
+  color: white;
   position: relative;
-  z-index: -101;
-  /* border-top: 2px solid black;
-  border-bottom: 2px solid black; */
-}
-
-.background1 {
-  margin-top: -40px;
-  min-height: 100vh;
+  flex-direction: column;
   display: flex;
-  align-items: center; /* Center vertically */
-  justify-content: center; /* Center horizontally */
-  position: relative;
-  z-index: -100;
-}
-
-.background1::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  background: radial-gradient(
-    ellipse at center,
-    rgba(0, 0, 0, 0) 20%,
-    rgba(0, 0, 0, 0.8) 100%
-  );
-}
-
-.background1 img {
-  width: 100vw; /* Make sure the image takes up the full width of the container */
-  height: 100vh; /* Make sure the image takes up the full height of the container */
-  object-fit: cover; /* Maintain aspect ratio and cover the container */
-}
-
-.line1 {
-  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  height: 30px;
-  width: 100%;
-  transform: rotate(95deg);
-  background-color: #ffffff;
-  margin-top: 100px;
-  margin-left: -15%;
-  position: absolute;
-  z-index: -1;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
-}
-.line2 {
-  height: 30px;
-  width: 100%;
-  overflow: hidden;
-  background-color: #ffffff;
-  margin-top: 280px;
-  margin-left: 29.7%;
-  position: absolute;
-  z-index: -1;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 7%;
+  z-index: 2;
+  transition: left 1s ease-in-out, opacity 1.5s ease-in-out;;
+  
 }
 
-body {
-  overflow-x: hidden;
+.aboutme_appear1 {
+  right: -20%;
+  opacity: 0%;
+  color: white;
+  position: relative;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 2%;
+  z-index: 2;
+  transition: right 1s ease-in-out, opacity 1.5s ease-in-out;;
+  
+}
+
+.aboutme_appear1 img {
+  width: 20vw;
+  border-radius: 2000px;
 }
