--- a/aboutmedia.css
+++ b/aboutmedia.css
@@ -1,49 +1,14 @@
 @media screen and (max-width: 960px) {
+  .aboutme_appear1 img {
+    width: 40vw;
+  }
   .aboutme_appear p {
-    font-size: 1.5vw; /* Adjust font size for smaller screens */
+    font-size: 2.2vw;
+    margin-top: 4%;
   }
+
   .about {
-    background-image: url("images/iamge2.jpg");
-    background-size: cover;
-    left: 50%;
-    transform: translateX(-44%);
-    width: 60%;
-    max-width: 384px;
-    height: 150px;
-    position: absolute;
-    z-index: 3;
-    font-size: 180%;
-    text-align: center;
-    margin-top: 75px;
-    background-color: rgba(255, 255, 255, 0.95);
-    padding: 20px;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    border-left: 2px solid #000; /* Border on the left edge */
-    border-bottom: 2px solid #000; /* Border on the bottom edge */
-    border-top: 2px solid #000; /* Border on the bottom edge */
-    border-right: 2px solid #000; /* Border on the left edge */
-    transition: 0.5s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-  }
-  .minimise {
-    display: flex;
-    visibility: hidden;
-    transition: opacity 0.6s ease, visibility 0.6s ease;
-    opacity: 0;
-    left: 50%;
-    z-index: 200;
-    max-width: 30px;
-    max-height: 30px;
-    width: auto;
-    height: auto;
-    border-radius: 3px;
-    margin-top: 30px;
-    background-color: rgba(255, 255, 255, 0.9);
-    position: absolute;
+    height: 5%;
   }
 
   #logo {
@@ -71,198 +36,5 @@
     height: 100%;
     color: #fff;
     font-size: 0.8rem;
-  }
-
-  .aboutme_appear {
-    background-size: cover;
-    background-position: bottom;
-    background-color: rgba(255, 255, 255, 0.9);
-    display: block;
-    text-align: center;
-    max-height: 10000px;
-    border-right: 2px solid #000;
-    border-top: 2px solid #000;
-    border-radius: 5px;
-    position: absolute;
-    word-wrap: break-word;
-    margin-left: -20%;
-    left: 73%;
-    transform: translateX(-50%);
-
-    width: 80%;
-    max-width: 1000px;
-    margin-top: 250px;
-    opacity: 0;
-    padding: 20px;
-    visibility: visible;
-    transition: opacity 0.6s ease, visibility 0.6s ease;
-    word-wrap: break-word;
-
-    overflow: hidden;
-  }
-
-  .aboutme_appear img {
-    max-width: 30vw;
-    height: auto;
-    border-radius: 1000px;
-    width: 100%;
-    margin-top: 10%;
-    margin-left: 0px;
-  }
-
-  .aboutme_appear p {
-    color: black;
-    padding-left: 2vw;
-    padding-top: 2vh;
-    padding-right: 2vw;
-    font-size: 2.5vw;
-    margin-left: 0;
-  }
-
-  /* Side Navigation Bar Styles */
-  .sidenav {
-    border: 4px double #000000;
-    border-radius: 15px;
-    background-image: url("images/iamge2.jpg");
-    background-size: cover;
-    height: auto;
-    width: 17.5%;
-    word-wrap: break-word;
-    position: fixed;
-    z-index: 900;
-    top: 0;
-    left: -50%;
-    background-color: rgba(255, 255, 255, 0.8); /* 0.8 transparency */
-    overflow-x: hidden;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    transition: 0.5s;
-    margin-top: 200px;
-    margin-left: -20px;
-  }
-
-  /* Links in the Side Navigation Bar */
-  .sidenav a {
-    padding: 15px 15px;
-    text-decoration: none;
-    font-size: 1.2vw;
-    color: rgb(0, 0, 0);
-    font-family: "DM Serif Display", serif;
-    display: block;
-    transition: 0.3s;
-    padding-left: 25%;
-  }
-
-  /* Change color on hover */
-  .sidenav a:hover {
-    background-color: #b5b5b5;
-  }
-
-  /* Main Content Styles */
-  .main {
-    transition: margin-left 0.5s;
-  }
-
-  #maintext {
-    margin-left: 18%;
-    margin-right: 18%;
-
-    transition: margin-left 0.5s;
-    padding-bottom: 40px;
-  }
-
-  h2 {
-    padding-top: 40px;
-    margin-left: 18%;
-    margin-right: 18%;
-    transition: margin-left 0.5s;
-  }
-
-  #aboutme1 {
-    position: relative;
-    z-index: 100;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    visibility: hidden;
-    transition: opacity 0.6s ease, visibility 0.6s ease;
-    width: 12%;
-    height: 350px;
-    max-width: calc(0.15 * 1920);
-    max-height: 350px;
-    overflow: auto;
-    padding-top: 20px;
-    left: 0;
-    transform: translateX(0%);
-    margin-top: 350px;
-    visibility: visible;
-    font-size: 1vw;
-    text-align: center;
-  }
-
-  #aboutme2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    visibility: hidden;
-    transition: opacity 0.6s ease, visibility 0.6s ease;
-    width: 12%;
-    height: 350px;
-    max-width: calc(0.15 * 1920);
-    max-height: 350px;
-    overflow: auto;
-    padding-top: 20px;
-    position: relative;
-    z-index: 100;
-    left: 0;
-    transform: translateX(0%);
-    visibility: visible;
-    margin-top: 350px;
-    font-size: 1vw;
-    text-align: center;
-  }
-
-  #aboutme3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    visibility: hidden;
-    transition: opacity 0.6s ease, visibility 0.6s ease;
-    width: 12%;
-    height: 350px;
-    max-width: calc(0.15 * 1920);
-    max-height: 350px;
-    overflow: auto;
-    padding-top: 20px;
-    position: relative;
-    z-index: 100;
-    left: 0;
-    visibility: visible;
-    transform: translateX(0%);
-    margin-top: 350px;
-    font-size: 1vw;
-    text-align: center;
-  }
-
-  #aboutme4 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    visibility: hidden;
-    transition: opacity 0.6s ease, visibility 0.6s ease;
-    width: 12%;
-    height: 350px;
-    max-width: calc(0.15 * 1920);
-    max-height: 350px;
-    overflow: auto;
-    padding-top: 20px;
-    position: relative;
-    z-index: 100;
-    left: 0%;
-    transform: translateX(0%);
-    visibility: visible;
-    margin-top: 350px;
-    font-size: 1vw;
-    text-align: center;
   }
 }
