--- a/about.css
+++ b/about.css
@@ -9,7 +9,7 @@
   
 }
 .about {
-  margin-top: 2%;
+  margin-top: 5vh;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -29,6 +29,7 @@
 
 
 .aboutme_appear {
+  font-size: 1.3vw;
   left: -20%;
   opacity: 0%;
   color: white;
@@ -40,7 +41,7 @@
   text-align: center;
   margin-left: 20%;
   margin-right: 20%;
-  margin-top: 7%;
+  margin-top: calc(5vh + 5%);
   z-index: 2;
   transition: left 1s ease-in-out, opacity 1.5s ease-in-out;;
   
@@ -58,13 +59,13 @@
   text-align: center;
   margin-left: 20%;
   margin-right: 20%;
-  margin-top: 2%;
+  margin-top: 7vh;
   z-index: 2;
   transition: right 1s ease-in-out, opacity 1.5s ease-in-out;;
   
 }
 
 .aboutme_appear1 img {
-  width: 20vw;
+  width: 500px;
   border-radius: 2000px;
 }
