--- a/aboutmedia.css
+++ b/aboutmedia.css
@@ -1,14 +1,49 @@
+@media screen and (max-width: 1200px) {
+  .aboutme_appear p {
+    font-size: 1.8vw;
+  }
+  .projectGrid {
+    padding: 20px;
+    border: 2px solid #000;
+    display: grid;
+    grid-template-columns: repeat(
+      2,
+      1fr
+    ); /* Creates 2 columns of equal width */
+    grid-gap: 20px; /* Adjust the gap between grid items as needed */
+    text-align: center;
+    margin-left: 18%;
+    margin-right: 18%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .projectGrid {
+    padding: 20px;
+    border: 2px solid #000;
+    display: grid;
+    grid-template-columns: repeat(
+      1,
+      1fr
+    ); /* Creates 2 columns of equal width */
+    grid-gap: 20px; /* Adjust the gap between grid items as needed */
+    text-align: center;
+    margin-left: 18%;
+    margin-right: 18%;
+  }
+}
 @media screen and (max-width: 960px) {
   .aboutme_appear1 img {
-    width: 40vw;
+    width: 400px;
   }
   .aboutme_appear p {
-    font-size: 2.2vw;
-    margin-top: 4%;
+    font-size: 2.5vw;
+    margin-top: calc(10vh + 5%);
   }
 
   .about {
-    height: 5%;
+    height: 5vh;
+    font-size: 3vw;
   }
 
   #logo {
