--- a/background.css
+++ b/background.css
@@ -1,20 +1,21 @@
 .background1 {
-  min-height: 100vh;
-  z-index: -1000;
   
+min-height: 100vh;
+overflow-x: hidden;
+  z-index: -1000;
+  position:relative;
 }
 
 .background::before {
   z-index: -900;
-  overflow: hidden;
   content: "";
   position: absolute;
-  top: -1%;
+  top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-   width: 100vw; /* Make sure the image takes up the full width of the container */
-  height: 100vh; /* Make sure the image takes up the full height of the container */
+  width: 100%;
+  height: 100%;
   background: linear-gradient(
     to right,
     rgba(255, 255, 255, 0) 0%,
@@ -30,7 +31,7 @@
 
 .background img {
   display: flex;
-  
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   object-fit: cover; /* Maintain aspect ratio and cover the container */
