--- a/background.css
+++ b/background.css
@@ -7,9 +7,10 @@ overflow-x: hidden;
 }
 
 .background::before {
+  
   z-index: -900;
   content: "";
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -35,7 +36,7 @@ overflow-x: hidden;
   width: 100%;
   height: 100%;
   object-fit: cover; /* Maintain aspect ratio and cover the container */
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
