--- a/aboutmedia.css
+++ b/aboutmedia.css
@@ -17,21 +17,9 @@
   }
 }
 
-@media screen and (max-width: 700px) {
-  .projectGrid {
-    padding: 20px;
-    border: 2px solid #000;
-    display: grid;
-    grid-template-columns: repeat(
-      1,
-      1fr
-    ); /* Creates 2 columns of equal width */
-    grid-gap: 20px; /* Adjust the gap between grid items as needed */
-    text-align: center;
-    margin-left: 18%;
-    margin-right: 18%;
-  }
-}
+
+
+
 @media screen and (max-width: 960px) {
   .aboutme_appear1 img {
     width: 350px;
@@ -71,5 +59,28 @@
     height: 100%;
     color: #fff;
     font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .projectGrid {
+    padding: 20px;
+    border: 2px solid #000;
+    display: grid;
+    grid-template-columns: repeat(
+      1,
+      1fr
+    ); /* Creates 2 columns of equal width */
+    grid-gap: 20px; /* Adjust the gap between grid items as needed */
+    text-align: center;
+    margin-left: 18%;
+    margin-right: 18%;
+  }
+}
+
+
+@media screen and (max-width: 500px) {
+  .aboutme_appear p {
+    font-size: 3.2vw;
   }
 }
