--- a/styles.css
+++ b/styles.css
@@ -83,11 +83,35 @@ h2 {
 }
 
 #projects h2 {
+  padding-top: 100px;
   text-align: center;
   padding-bottom: 3vh;
+  font-size: 898;
 }
 
+.experience-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 100vh; /* Adjust as needed based on your design */
+  z-index: 3;
+}
 
+.experience-item {
+  width: 300px;
+  margin: 20px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity 0.5s, transform 0.5s;
+  z-index: 3;
+}
+
+.show-experience {
+  opacity: 1;
+  transform: translateX(0);
+}
 
 .navbar {
   
