--- a/aboutmedia.css
+++ b/aboutmedia.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 1200px) {
   .aboutme_appear p {
     font-size: 1.8vw;
+    margin-top: 8%;
   }
   .projectGrid {
     padding: 20px;
@@ -17,16 +18,23 @@
   }
 }
 
-
-
-
 @media screen and (max-width: 960px) {
+  #mobile_menu {
+    background-color: white;
+    color: #fff;
+  }
+
+  .navbar__toggle .bar {
+    display: block;
+    cursor: pointer;
+  }
+
   .aboutme_appear1 img {
     width: 350px;
   }
   .aboutme_appear p {
     font-size: 2.5vw;
-    margin-top: calc(10vh + 5%);
+    margin-top: calc(10vh + 3%);
   }
 
   .about {
@@ -71,16 +79,25 @@
       1,
       1fr
     ); /* Creates 2 columns of equal width */
-    grid-gap: 20px; /* Adjust the gap between grid items as needed */
+    grid-gap: auto; /* Adjust the gap between grid items as needed */
     text-align: center;
     margin-left: 18%;
     margin-right: 18%;
   }
 }
 
-
 @media screen and (max-width: 500px) {
   .aboutme_appear p {
-    font-size: 3.2vw;
+    margin-left: -10%;
+    margin-right: -10%;
+    font-size: 3.5vw;
+  }
+
+  .aboutme_appear1 img {
+    width: 250px;
+  }
+
+  .sidenav {
+    margin-left:-100%;
   }
 }
