cleaning up code

--- a/about.css
+++ b/about.css
@@ -4,20 +4,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
   text-align: center;
-  
 }
+
 .about {
-  margin-top: 5vh;
   position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  /* Display flex keeps the about me text in the centre */
+  margin-top: 5vh;
   font-size: 1.5vw;
   width: auto;
-  
-  
   padding: 20px;
   z-index: 1;
   background-color: rgb(255, 255, 255);
@@ -25,26 +23,22 @@
   border-radius: 100vw;
 }
 
-
-
-
 .aboutme_appear {
+  position: relative;
+  flex-direction: column;
+  display: flex;
+  /* Display flex keeps the textbox relative to the previosu flexbox*/
+  text-align: center;
   font-size: 1.3vw;
   left: -20%;
   opacity: 0%;
   color: white;
-  position: relative;
-  flex-direction: column;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
+
   margin-left: 30%;
   margin-right: 30%;
   margin-top: calc(7vh + 5%);
   z-index: 2;
-  transition: left 1s ease-in-out, opacity 1.5s ease-in-out;;
-  
+  transition: left 1s ease-in-out, opacity 1.5s ease-in-out;
 }
 
 .aboutme_appear1 {
@@ -54,15 +48,12 @@
   position: relative;
   flex-direction: column;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  text-align: center;
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 7vh;
   z-index: 2;
-  transition: right 1s ease-in-out, opacity 1.5s ease-in-out;;
-  
+  transition: right 1s ease-in-out, opacity 1.5s ease-in-out;
 }
 
 .aboutme_appear1 img {
