--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ h2 {
   padding: 20px;
   border: 2px solid #000;
   display: grid;
-  grid-template-columns: repeat(3, minmax(100px, 1fr)); /* Creates 2 columns of equal width */
+  grid-template-columns: repeat(2, minmax(100px, 1fr)); /* Creates 2 columns of equal width */
   grid-gap: 20px; /* Adjust the gap between grid items as needed */
 
   margin-left: 18%;
@@ -81,13 +81,10 @@ h2 {
   color: rgb(0, 0, 0);
   font-size: 1vw;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -100%);
+  
   padding: 20px;
   border-radius: 1000px;
-  z-index: 2;
+  z-index: 5;
   text-decoration: none;
 }
 
@@ -120,19 +117,26 @@ h2 {
 }
 
 .projectImage {
+  border-radius: 2vh;
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-
+  border: 4px solid rgb(255, 255, 255);
+  background-color: #ef9999;
   color: white;
   flex-direction: column;
   overflow:hidden;
   position: relative;
 }
 
+.video {
+  overflow: hidden;
+  
+}
+
 .projectImage video {
-  border-radius: 2vh;
+  border-radius: inherit;
+  overflow: hidden;
+  object-fit: cover;
 }
 
 .glassy-filter {
