--- a/background.css
+++ b/background.css
@@ -1,25 +1,15 @@
-.background1 {
-  
-min-height: 100vh;
-overflow-x: hidden;
+.firstSection {
+  min-height: 100vh;
+  overflow-x: hidden;
   z-index: -1000;
-  position:relative;
+  position: relative;
 }
 
 .background::before {
-  
-  z-index: -900;
   content: "";
   position: fixed;
-  
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
   background: radial-gradient(
     ellipse at center,
     rgba(0, 0, 0, 0.5) 10%,
@@ -29,10 +19,9 @@ overflow-x: hidden;
 
 .background img {
   display: flex;
-  overflow-x: hidden;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Maintain aspect ratio and cover the container */
+  object-fit: cover; 
   position: fixed;
   top: 50%;
   left: 50%;
