--- a/aboutmedia.css
+++ b/aboutmedia.css
@@ -1,4 +1,66 @@
 @media screen and (max-width: 1200px) {
+  .aboutme-btn {
+    position: relative;
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+  }
+
+  .about {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* Display flex keeps the about me text in the centre */
+    margin-top: 5vh;
+    font-size: 1.5vw;
+    width: auto;
+    padding: 20px;
+    z-index: 1;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border-radius: 100vw;
+  }
+
+  .aboutme_appear {
+    position: relative;
+    flex-direction: column;
+    display: flex;
+    /* Display flex keeps the textbox relative to the previosu flexbox*/
+    text-align: center;
+    font-size: 1.3vw;
+    left: -20%;
+    opacity: 0%;
+    color: white;
+
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: calc(7vh + 5%);
+    z-index: 2;
+    transition: left 1s ease-in-out, opacity 1.5s ease-in-out;
+  }
+
+  .aboutme_appear1 {
+    right: -20%;
+    opacity: 0%;
+    color: white;
+    position: relative;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 7vh;
+    z-index: 2;
+    transition: right 1s ease-in-out, opacity 1.5s ease-in-out;
+  }
+
+  .aboutme_appear1 img {
+    width: 500px;
+    border-radius: 2000px;
+  }
   .aboutme_appear p {
     font-size: 1.8vw;
     margin-top: 8%;
@@ -98,6 +160,6 @@
   }
 
   .sidenav {
-    margin-left:-100%;
+    margin-left: -100%;
   }
 }
