--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,12 @@
   padding: 0;
   /* font-family: "Marcellus", serif;
   font-family: "Passion One", sans-serif;
-  font-family: "DM Serif Display", serif;
+  
   font-family: "Lexend Deca", sans-serif;
   font-family: "Lato", sans-serif;
   font-family: "Brawler", serif; */
-  font-family: "Lexend Deca", sans-serif; /*
+  font-family: "Lexend Deca", sans-serif; 
+  font-family: "DM Serif Display", serif;/*
   font-family: 'Nova Square', sans-serif;/*
   font-family: 'Righteous', sans-serif;
   font-family: "Sora", sans-serif; 
@@ -62,11 +63,13 @@ h2 {
   padding: 20px;
   border: 2px solid #000;
   display: grid;
+  align-items: center;
+  justify-items: center;
   grid-template-columns: repeat(
     2,
     minmax(100px, 1fr)
   ); /* Creates 2 columns of equal width */
-  grid-gap: 20px; /* Adjust the gap between grid items as needed */
+  grid-gap: 50px; /* Adjust the gap between grid items as needed */
 
   margin-left: 18%;
   margin-right: 18%;
@@ -76,38 +79,24 @@ h2 {
 .projectGrid img {
   display: flex;
   justify-content: center;
+  
   width: 100%;
 }
 
 /* The Project Container for each Project */
 .projectImage {
+  max-width: 800px;
   border-radius: 2vh;
   width: 100%;
   display: flex;
   border: 4px solid rgb(255, 255, 255);
-  background-color: #ef9999;
+  background-color: rgb(248, 227, 231);
   color: white;
   flex-direction: column;
+  
+  
   overflow: hidden;
   position: relative;
-}
-
-/* The filter */
-.glassy-filter {
-  border-radius: 2vh;
-  z-index: 2;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-
-  background: radial-gradient(
-    ellipse at center,
-    rgba(150, 137, 137, 0.5) 10%,
-    rgb(255, 255, 255) 100%
-  );
 }
 
 /* The Image/Video that goes into the Container */
@@ -119,10 +108,41 @@ h2 {
   z-index: 1;
 }
 
-.projectImage video {
+.filter {
   border-radius: inherit;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  position: relative;
+}
+
+.filter::after {
+  border-radius: inherit;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(
+    ellipse at center,
+    rgba(0, 0, 0, 0.2) 0%,
+    rgba(0, 0, 0, 1) 90%
+  );
+}
+
+.filter video {
   overflow: hidden;
   object-fit: cover;
+  position: relative;
+}
+
+.video::-webkit-media-controls {
+  display: none !important;
+}
+
+.video::-webkit-media-controls-panel {
+  width: 0;
+  height: 0;
+  display: none !important;
 }
 
 /* The text */
@@ -139,23 +159,46 @@ h2 {
 
 /* Learn More Button */
 .learnMore {
-  color: white;
-  background: rgb(242, 185, 194);
+  color: rgb(184, 115, 115);
+  background: rgb(255, 212, 219);
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, -50%);
   padding: 20px;
   border-radius: 1000px;
   z-index: 2;
   text-decoration: none;
   border: 6px solid #ef9999;
-  font-family: "Lexend Deca", sans-serif;
+  font-size: 1vw;
 }
 
 .learnMore:hover {
   color: rgb(220, 220, 220);
-  background-color: #ef9999;
+  background-color: #e08e8e;
+}
+
+#oneOne {
+  left: -40%;
+  opacity: 0%;
+  transition: left 0.8s ease-in-out, opacity 1s ease-in-out;
+}
+
+#oneTwo {
+  right: -40%;
+  opacity: 0%;
+  transition: right 0.8s ease-in-out, opacity 1s ease-in-out;
+}
+
+#twoOne {
+  left: -40%;
+  opacity: 0%;
+  transition: left 0.8s ease-in-out, opacity 1s ease-in-out;
+}
+#twoTwo {
+  right: -40%;
+  opacity: 0%;
+  transition: right 0.8s ease-in-out, opacity 1s ease-in-out;
 }
 /* ------------------------------------------------------------ */
 /* ------------------------------------------------------------ */
