--- a/about.css
+++ b/about.css
@@ -1,4 +1,5 @@
 .aboutme-btn {
+  
   position: relative;
   flex-direction: column;
   display: flex;
@@ -8,6 +9,7 @@
 }
 
 .about {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -23,13 +25,49 @@
   border-radius: 100vw;
 }
 
+.cv-btn {
+  position: relative;
+  flex-direction: column;
+  display: flex;
+
+  align-items: center;
+  text-align: center;
+}
+
+
+
+.cv {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
+  border: 4px solid rgb(255, 255, 255);
+  margin-top: 5vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  left: -20%;
+  font-size: 1vw;
+  width: auto;
+  padding: 20px;
+  z-index: 4;
+  background-color: rgb(255, 241, 241);
+  color: rgb(0, 0, 0);
+  border-radius: 100vw;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.cv:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(192, 192, 192);
+}
+
 .aboutme_appear {
   
   position: relative;
   flex-direction: column;
   display: flex;
   /* Display flex keeps the textbox relative to the previosu flexbox*/
-  
+
   font-size: 1.3vw;
   left: -20%;
   opacity: 0%;
@@ -43,6 +81,7 @@
 }
 
 .aboutme_appear1 {
+
   right: -20%;
   opacity: 0%;
   color: white;
@@ -52,7 +91,7 @@
   align-items: center;
   margin-left: 60%;
   margin-right: 25%;
-  margin-top: -17%;
+  margin-top: -22%;
   z-index: 2;
   transition: right 1s ease-in-out, opacity 1.5s ease-in-out;
 }
