--- a/aboutmedia.css
+++ b/aboutmedia.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 1700px) {
+  
   #projects {
     margin-top: -15%;
   }
@@ -7,6 +8,10 @@
 @media screen and (max-width: 1500px) {
   #projects {
     margin-top: -20%;
+  }
+
+  .cv {
+    font-size: 1.2vw;
   }
 }
 
@@ -19,6 +24,12 @@
 @media screen and (max-width: 1200px) {
   #projects {
     margin-top: -8%;
+  }
+
+  .cv {
+    font-size: 1.5vw;
+    left: 0%;
+    margin-top: 4vh
   }
 
   .aboutme-btn {
@@ -74,22 +85,25 @@
     align-items: center;
     margin-left: 20%;
     margin-right: 20%;
-    margin-top: 7vh;
+    margin-top: 4vh;
     z-index: 2;
     transition: right 1s ease-in-out, opacity 1.5s ease-in-out;
   }
 
   .aboutme_appear1 img {
-    width: 500px;
+    width: 400px;
     border-radius: 2000px;
   }
   .aboutme_appear p {
     font-size: 1.8vw;
     margin-top: 8%;
   }
+  #projects {
+  margin-top: 0%;
+}
   .projectGrid {
     padding: 20px;
-    border: 2px solid #000;
+    
     display: grid;
     grid-template-columns: repeat(
       2,
@@ -113,17 +127,28 @@
     cursor: pointer;
   }
 
+
+  .aboutme_appear1  {
+    margin-top: 3vh;
+  }
   .aboutme_appear1 img {
     width: 350px;
   }
   .aboutme_appear p {
     font-size: 2.5vw;
-    margin-top: calc(10vh + 3%);
+    margin-top: calc(3vh + 15%);
   }
 
-  .about {
+  .about{
     height: 5vh;
     font-size: 3vw;
+  }
+
+  .cv {
+    left: 0%;
+    margin-top: 3vh;
+    height: 3vh;
+    font-size: 2vw;
   }
 
   #logo {
@@ -155,9 +180,11 @@
 }
 
 @media screen and (max-width: 700px) {
+  .sidenav {
+    margin-left: -100%;
+  }
   .projectGrid {
     padding: 20px;
-    border: 2px solid #000;
     display: grid;
     grid-template-columns: repeat(
       1,
@@ -168,6 +195,10 @@
     margin-left: 18%;
     margin-right: 18%;
   }
+
+  .cv {
+    font-size: 2vh;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -175,9 +206,14 @@
     margin-top: -30%;
   }
 
-  .about {
+ .about {
     width: 30%;
     font-size: 4vw;
+  }
+
+  .cv {
+    width: 20%;
+    font-size: 3.2vw;
   }
 
   .aboutme_appear p {
@@ -190,7 +226,8 @@
     width: 280px;
   }
 
-  .sidenav {
-    margin-left: -100%;
+    .cv {
+    font-size: 1.6vh;
   }
+  
 }
